since version 1.9.2
===================
* update NCEP grib lib (g2clib) to version 1.2.3.
* ncepgrib2.Grib2Encode.addfield now accepts masked arrays
  (the bitmap is automatically created from the mask).

version 1.9.2 (svn revision 544)
================================
* python 3 fix for ncepgrib2.
* change behavior of open.select, so that it always searches
  from beginning of file (not from where iterator is currently
  positioned).
* fix calculation of longitudes for gridType='regular_ll', when
  longitudeOfLastGridPoint < longitudeOfFirstGridPoint.  For 
  example, for ECMWF grids sometimes longitudeOfFirstGridPoint = 0
  and longitudeOfLastGridPoint = -0.5.  In such cases, 
  longitudeOfLastGridPoint should be treated as 359.5 (issue 39)

version 1.9.1 (svn revision 527)
================================
* validDate now correctly defined if forecast time units
  is minutes or days, not just hours. If forecast time is 
  a range, validDate corresponds to the end of the range.
  fcstimeunits gribmessage instance variable added.
* fix bug for reg lat/lon and gaussian grids introduced in 1.9.0.
* add type of forecast interval (max,accum,avg) to gribmessage.__repr__
* add forecast time units in gribmessage.__repr__
* fix bug in ncepgrib2 (issue 38)

version 1.9.0 (svn revision 511)
================================
* use numpy.ma.isMA instead of hasattr(arr,'mask').
* include ncep grib2 lib and python interface (ncepgrib2 module).  This
  is used by pygrib to decode grib messages with packingType='grid_complex'
  and 'grid_complex_spatial_differencing' since grib_api does not decode
  these messages correctly.  ncepgrib2.Grib2Encode also provides a way to
  create grib2 messages from scratch.
* grb.__repr__ returns parameterName and parameterUnits, if name and units
  keys don't exist (issue 36).
* regenerate with Cython 0.15.1, fix a couple of latent bugs found by new Cython
  compiler.

version 1.8.4 - svn revision 478
================================