@@ -2,7 +2,8 @@ since version 1.9.2
 ===================
 * update NCEP grib lib (g2clib) to version 1.2.3.
 * ncepgrib2.Grib2Encode.addfield now accepts masked arrays
-  (the bitmap is automatically created from the mask).
+  (the bitmap is automatically created from the mask). bitmapflag and 
+  bitmap keywords removed. scan order is now automatically taken care of.
 
 version 1.9.2 (svn revision 544)
 ================================
